making use of toList()